--- a/index.html
+++ b/index.html
@@ -1514,8 +1514,6 @@ const quizData = {
     ],
   
   4: [
-    
-
   {question:"ما هي أول سورة نزلت كاملة على النبي محمد ﷺ؟", basePoints:60, answers:[
     {text:"سورة الفاتحة", correct:false},
     {text:"سورة المدثر", correct:false},
@@ -1561,8 +1559,8 @@ const quizData = {
   ]},
   {question:"من هو الصحابي الذي لقبه النبي ﷺ بـ ذو النورين؟", basePoints:160, answers:[
     {text:" عمر بن الخطاب", correct:false},
-    {text:"علي بن أبي طالب", correct:true},
-    {text:"عثمان بن عفان ", correct:false},
+    {text:"علي بن أبي طالب", correct:false},
+    {text:"عثمان بن عفان ", correct:true},
     {text:"سعد بن أبي وقاص ", correct:false}
   ]},
   {question:"ما السورة التي تُعرف باسم سورة العهد؟", basePoints:100, answers:[
