--- a/index.html
+++ b/index.html
@@ -1551,7 +1551,7 @@ const quizData = {
     {text:"سورة البقرة", correct:true},
 
   ]},
-  {question:"ما اسم ملك الموت المذكور في القرآن؟", basePoints:100, answers:[
+  {question:"ما اسم خازن النار في القرآن؟", basePoints:150, answers:[
     {text:"مالك", correct:true},
     {text:"ميكائيل", correct:false},
     {text:"جبريل", correct:false},
@@ -1563,8 +1563,8 @@ const quizData = {
     {text:"عثمان بن عفان ", correct:true},
     {text:"سعد بن أبي وقاص ", correct:false}
   ]},
-  {question:"ما السورة التي تُعرف باسم سورة العهد؟", basePoints:100, answers:[
-    {text:"البقرة ", correct:true},
+  {question:"ما السورة التي تُعرف باسم سورة العهد؟", basePoints:200, answers:[
+    {text:"المائدة ", correct:true},
     {text:"النساء ", correct:false},
     {text:"آل عمران ", correct:false},
     {text:"يوسف ", correct:false}
