--- a/index.html
+++ b/index.html
@@ -1304,6 +1304,12 @@ const quizData = {
     {text:"50", correct:false},
     {text:"60", correct:false}
   ]},
+  {question:"What is the sum of the first 8 positive integers?", basePoints:100, answers:[
+    {text:"36", correct:true},
+    {text:"45", correct:false},
+    {text:"44", correct:false},
+    {text:"38", correct:false}
+  ]},
   {question:"If f(x) = 2x + 3, find f(5)", basePoints:70, answers:[
     {text:"13", correct:true},
     {text:"10", correct:false},
@@ -1576,11 +1582,20 @@ const quizData = {
     {text:"علي بن أبي طالب", correct:false}
   ]},
   {question:"ما آخر سورة نزلت كاملة على النبي ﷺ؟", basePoints:100, answers:[
-    {text:"التوبة", correct:true},
+    {text:"النصر", correct:true},
     {text:"البقرة", correct:false},
     {text:"الكوثر", correct:false},
     {text:"يس", correct:false}
   ]},
+  {question: "ما هي السورة التي لا تبدأ بالبسملة؟",
+  basePoints: 100,
+  answers: [
+    { text: "الفاتحة", correct: false },
+    { text: "البقرة", correct: false },
+    { text: "التوبة", correct: true },
+    { text: "آل عمران", correct: false }
+  ]
+},
   {question:"أي سورة نزلت كاملةً في ليلة واحدة؟", basePoints:200, answers:[
     {text:"سورة الفاتحة", correct:false},
     {text:"سورة القدر", correct:false},
