--- a/index.html
+++ b/index.html
@@ -1598,9 +1598,9 @@ const quizData = {
 },
   {question:"أي سورة نزلت كاملةً في ليلة واحدة؟", basePoints:200, answers:[
     {text:"سورة الفاتحة", correct:false},
-    {text:"سورة القدر", correct:false},
+    {text:"سورة القدر", correct:true},
     {text:"سورة النصر", correct:false},
-    {text:"سورة المدثر", correct:true}
+    {text:"سورة المدثر", correct:false}
   ]},
   {question:"من هو الصحابي المعروف بحبر الأمه؟ ", basePoints:120, answers:[
     {text:"أبي بكر الصديق", correct:false},
